src/app/components/header/header.component.scss
@import "../../../variables";

.l-header-toolbar {
  position: relative;
  z-index: 2;
  padding: 0 10px;
  background-color: #fff;
  box-shadow: 0 1px 0 rgba(12, 13, 14, 0.1), 0 1px 6px rgba(59, 64, 69, 0.1);
  color: $black;

  > .l-header-logged-user {
    margin-left: auto;
  }
}

